--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
   <header>
-    🌍 World Leaders Directory
+    🌍 World Leaders Directory 2025
   </header>
 
   <div class="search-container">
