--- a/index.html
+++ b/index.html
@@ -1604,7 +1604,7 @@
 
     <div class="item bg-white rounded-lg shadow-md p-4 mb-3 flex items-center justify-between">
       <div class="flex items-center">
-        <span class="text-gray-500 mr-2">194.</span>
+        <span class="text-gray-500 mr-2">(194).</span>
         <span class="flag">🇻🇦</span>
         <span>Vatican City - Pope Francis</span>
       </div>
@@ -1612,7 +1612,7 @@
     </div>
     <div class="item bg-white rounded-lg shadow-md p-4 mb-3 flex items-center justify-between">
       <div class="flex items-center">
-        <span class="text-gray-500 mr-2">195.</span>
+        <span class="text-gray-500 mr-2">(195).</span>
         <span class="flag">🇵🇸</span>
         <span>Palestine - President Mahmoud Abbas</span>
       </div>
@@ -1621,7 +1621,7 @@
     <!-- Optional: Add Kosovo for a 196-country list -->
     <div class="item bg-white rounded-lg shadow-md p-4 mb-3 flex items-center justify-between">
       <div class="flex items-center">
-        <span class="text-gray-500 mr-2">196.</span>
+        <span class="text-gray-500 mr-2">(196).</span>
         <span class="flag">🇽🇰</span>
         <span>Kosovo - President Vjosa Osmani</span>
       </div>
